<resources>
    <string name="app_name">MoodSwing_0.0.0</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_text">Welcome to MoodSwing! Please login below.</string>
    <string name="login">login</string>
    <string name="login_hint">username</string>
    <string name="moodswing">MoodSwing</string>
    <string name="followers_following"><![CDATA[Followers & Following]]></string>
    <string name="home">Home</string>
    <string name="new_mood_event">New Mood Event</string>
    <string name="mood_history">View Mood History</string>
</resources>
