<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <Space
        android:layout_width="match_parent"
        android:layout_height="170dp" />

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/welcomeText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:hint="@string/login_hint"
        android:paddingLeft="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:background="@drawable/login_edittext_shape"
        android:id="@+id/username"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton" />
</LinearLayout>